# bag-of-holding

./: .gitignore  ChangeLog.md  LICENSE  README.md  README.org  bag-of-holding.cabal  stack.yaml
.github/workflows/: ci.yaml
exec/: BOH.hs
exec/BOH/: CLI.hs  Poll.hs  Signing.hs  UI.hs
lib/: Holding.hs
lib/Holding/: Chainweb.hs
test/: Test.hs
