cabal-version:      2.2
name:               bag-of-holding
version:            1.0.0
synopsis:           A terminal-based wallet for Chainweb.
description:        A terminal-based wallet for Chainweb.
homepage:           https://gitlab.com/fosskers/bag-of-holding
author:             Colin Woodbury
maintainer:         colin@fosskers.ca
copyright:          2019 Colin Woodbury
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  ChangeLog.md

common commons
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Wpartial-fields -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Widentities -funclutter-valid-hole-fits

  build-depends:
    , aeson           ^>=1.4
    , base            >=4.7  && <5
    , chainweb        ^>=0.2
    , rio             ^>=0.1
    , servant-client  ^>=0.16

library
  import:          commons
  hs-source-dirs:  lib
  exposed-modules: Holding
  build-depends:
    , aeson-pretty   ^>=0.8
    , errors         ^>=2.3
    , pact           ^>=3.2
    , prettyprinter  ^>=1.2
    , servant        ^>=0.16

executable boh
  import:         commons
  ghc-options:    -threaded -with-rtsopts=-N
  hs-source-dirs: exec
  main-is:        BOH.hs
  build-depends:
    , bag-of-holding
    , brick                 >=0.47 && <0.50
    , http-client           ^>=0.6
    , http-client-tls       ^>=0.3
    , optparse-applicative  >=0.14
    , transformers          >=0.5

-- test-suite boh-tests
--   import:         commons
--   type:           exitcode-stdio-1.0
--   hs-source-dirs: test
--   main-is:        Test.hs
--   ghc-options:    -threaded -with-rtsopts=-N
--   build-depends:
--     , bag-of-holding
--     , tasty           ^>=1.2
--     , tasty-hunit     ^>=0.10
