cabal-version:      2.2
name:               bag-of-holding
version:            1.1.0
synopsis:           A terminal-based wallet for Chainweb.
description:        A terminal-based wallet for Chainweb.
homepage:           https://github.com/kadena-community/bag-of-holding
author:             Colin Woodbury
maintainer:         colin@fosskers.ca
copyright:          2019 Colin Woodbury
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  ChangeLog.md

common commons
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Wpartial-fields -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Widentities -funclutter-valid-hole-fits
    -fmax-relevant-binds=0

  build-depends:
    , aeson           ^>=1.4
    , base            >=4.12 && <5
    , errors          ^>=2.3
    , generic-lens    >=1.1  && <1.3
    , microlens       ^>=0.4
    , pact            ^>=3.3
    , rio             ^>=0.1
    , servant-client  ^>=0.16

library
  import:          commons
  hs-source-dirs:  lib
  exposed-modules:
    Holding
    Holding.Chainweb

  build-depends:
    , prettyprinter  ^>=1.2
    , servant        ^>=0.16
    , time           ^>=1.8
    , yaml           ^>=0.11

executable boh
  import:         commons
  ghc-options:    -threaded -with-rtsopts=-N
  hs-source-dirs: exec
  main-is:        BOH.hs
  other-modules:
    BOH.CLI
    BOH.Signing
    BOH.UI

  build-depends:
    , bag-of-holding
    , brick                 >=0.47 && <0.50
    , http-client           ^>=0.6
    , http-client-tls       ^>=0.3
    , optparse-applicative  ^>=0.14
    , pretty-simple         ^>=2.2
    , servant               ^>=0.16
    , servant-server        ^>=0.16
    , transformers          ^>=0.5
    , vty                   >=5.25
    , wai-cors              >=0.2
    , warp                  >=3.2

-- test-suite boh-tests
--   import:         commons
--   type:           exitcode-stdio-1.0
--   hs-source-dirs: test
--   main-is:        Test.hs
--   ghc-options:    -threaded -with-rtsopts=-N
--   build-depends:
--     , bag-of-holding
--     , tasty           ^>=1.2
--     , tasty-hunit     ^>=0.10
